2018/Clase/10_matrices/multiplica/compiling_error.txt
/home/student/jcalderon/work/Programming/2018/Clase/10_matrices/multiplica/multiplica.cpp: In function ‘void ver()’:
/home/student/jcalderon/work/Programming/2018/Clase/10_matrices/multiplica/multiplica.cpp:28:3: error: ‘r’ was not declared in this scope
   r[M][P]=a[M][N]*b[N][P]
   ^
/home/student/jcalderon/work/Programming/2018/Clase/10_matrices/multiplica/multiplica.cpp:28:11: error: ‘a’ was not declared in this scope
   r[M][P]=a[M][N]*b[N][P]
           ^
/home/student/jcalderon/work/Programming/2018/Clase/10_matrices/multiplica/multiplica.cpp:28:19: error: ‘b’ was not declared in this scope
   r[M][P]=a[M][N]*b[N][P]
                   ^
